@@ -2300,17 +2300,28 @@ class TestOrderServiceTest extends BaseServiceTest<TestOrderService> {
     patientsToRoles.put(LEELOO, PersonRole.STUDENT);
 
     Map<PersonName, AskOnEntrySurvey> patientsToSurveys = new HashMap<>();
-    patientsToSurveys.put(AMOS, new AskOnEntrySurvey(null, Map.of("fake", true), false, null));
-    patientsToSurveys.put(CHARLES, new AskOnEntrySurvey(null, Collections.emptyMap(), false, null));
-    patientsToSurveys.put(DEXTER, new AskOnEntrySurvey(null, Collections.emptyMap(), true, null));
-    patientsToSurveys.put(ELIZABETH, new AskOnEntrySurvey(null, Map.of("fake", true), false, null));
-    patientsToSurveys.put(FRANK, new AskOnEntrySurvey(null, Collections.emptyMap(), false, null));
-    patientsToSurveys.put(GALE, new AskOnEntrySurvey(null, Collections.emptyMap(), true, null));
-    patientsToSurveys.put(HEINRICK, new AskOnEntrySurvey(null, Map.of("fake", true), false, null));
-    patientsToSurveys.put(IAN, new AskOnEntrySurvey(null, Collections.emptyMap(), false, null));
-    patientsToSurveys.put(JANNELLE, new AskOnEntrySurvey(null, Collections.emptyMap(), true, null));
-    patientsToSurveys.put(KACEY, new AskOnEntrySurvey(null, Map.of("fake", true), false, null));
-    patientsToSurveys.put(LEELOO, new AskOnEntrySurvey(null, Collections.emptyMap(), false, null));
+    patientsToSurveys.put(
+        AMOS, new AskOnEntrySurvey(null, Map.of("fake", true), false, null, null));
+    patientsToSurveys.put(
+        CHARLES, new AskOnEntrySurvey(null, Collections.emptyMap(), false, null, null));
+    patientsToSurveys.put(
+        DEXTER, new AskOnEntrySurvey(null, Collections.emptyMap(), true, null, null));
+    patientsToSurveys.put(
+        ELIZABETH, new AskOnEntrySurvey(null, Map.of("fake", true), false, null, null));
+    patientsToSurveys.put(
+        FRANK, new AskOnEntrySurvey(null, Collections.emptyMap(), false, null, null));
+    patientsToSurveys.put(
+        GALE, new AskOnEntrySurvey(null, Collections.emptyMap(), true, null, null));
+    patientsToSurveys.put(
+        HEINRICK, new AskOnEntrySurvey(null, Map.of("fake", true), false, null, null));
+    patientsToSurveys.put(
+        IAN, new AskOnEntrySurvey(null, Collections.emptyMap(), false, null, null));
+    patientsToSurveys.put(
+        JANNELLE, new AskOnEntrySurvey(null, Collections.emptyMap(), true, null, null));
+    patientsToSurveys.put(
+        KACEY, new AskOnEntrySurvey(null, Map.of("fake", true), false, null, null));
+    patientsToSurveys.put(
+        LEELOO, new AskOnEntrySurvey(null, Collections.emptyMap(), false, null, null));
 
     List<TestEvent> testEvents =
         patientsToResults.keySet().stream()
